scss/common/_notification.scss
// Alert

.alert {
  @include card;

  margin-bottom: $spacer-y;

  .close {
    font-size: inherit;
    top: .125em;
    right: 0;
  }
}

.alert-bootstrap-mode,
.consent_banner {
  margin-bottom: $spacer-lg;
}

[id='modal-alert'] {
  border-radius: 0;
  box-shadow: none;
  margin-bottom: 0;
  padding: $modal-padding-y $modal-padding-x;
}

